<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

<LinearLayout 
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    >
    
    <Button
        android:id="@+id/addPatient"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/add_patient" />
    <Button
        android:id="@+id/BackupDB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/backup_data" />
    
    </LinearLayout>
	 <TextView android:layout_width="fill_parent"
	  android:layout_height="wrap_content" android:padding="10dp"
	  android:text="@string/some_text" android:textSize="20sp" />
	 
	 <EditText android:id="@+id/myFilter" android:layout_width="match_parent"
	  android:layout_height="wrap_content" android:ems="10"
	  android:hint="@string/some_hint">
	  <requestFocus />
	 </EditText>
	 
	 <ListView android:id="@+id/listView1" android:layout_width="fill_parent"
	  android:layout_height="fill_parent" />
	 
</LinearLayout>
